--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,8 @@ name: TESTER
 
 # Controls when the workflow will run
 on:
+  push:
+    branches: [master]
   pull_request:
     branches: [master]
 
