--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: create env file
         run: |
-          touch .env
+          touch ./config/environments/.env
           echo VERSION = 0.0.1 >> ./config/environments/.env
           echo NODE_ENV = test_remote >> ./config/environments/.env
 
