--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "convict-format-with-validator": "^6.2.0",
     "date-fns": "^2.27.0",
     "express": "^4.17.1",
-    "firebase-admin": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
